compiler/tests/success/x86-64/andn.jazz
export
fn f32(reg u32 x, reg u32 y) -> reg u32 {
  reg u32 z;
  z = !x & y;
  return z;
}

export
fn f64(reg u64 x, reg u64 y) -> reg u64 {
  reg u64 z;
  z = !x & y;
  return z;
}

export
fn m32(reg u32 x, reg u64 p) -> reg u32 {
  reg u32 z;
  z = !x & (u32)[p + 0];
  return z;
}

export
fn m64(reg u64 x, reg u64 p) -> reg u64 {
  reg u64 z;
  z = !x & [p + 0];
  return z;
}
