compiler/tests/fail/register_allocation/x86-64/bug_426.jazz
fn foo(reg u64 x y) -> reg u64 {
    [x] = 0;
    return y;
}

export
fn dummy(reg u64 p) -> reg u64 {
  p = p;
  _ = foo(p, p);
  return p;
}
